# itmo-cg

./: .gitignore  CMakeLists.txt  exports.h  main.cpp  vcpkg.json
game/: common_structs.h  consts.hpp  game.cpp  game.hpp  game_component.hpp  renderer.h
game/components/: ball_component.cpp  ball_component.hpp  camera_component.cpp  camera_component.hpp  paddle_component.cpp  paddle_component.hpp  triangle_component.cpp  triangle_component.hpp
game/components/3d/: ball_3d_component.cpp  ball_3d_component.hpp  katamari_player_component.cpp  katamari_player_component.hpp  mesh_component.cpp  mesh_component.hpp  model_component.cpp  model_component.hpp  paddle_3d_component.cpp  paddle_3d_component.hpp  planet_component.cpp  planet_component.hpp  textured_model_component.cpp  textured_model_component.hpp
game/utils/: geometry_generator.cpp  geometry_generator.hpp
models/: diamond.mtl  pizza.fbx  wolf.fbx  wolf.glb
models/mushroom/: mushroom.mtl
shaders/: BallShader.hlsl  PaddleShader.hlsl  SphereWithCamera.hlsl  TexturedShader.hlsl
